Policy/examples/RequestHeaderModifier/remove_header_policy.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1alpha2
metadata:
  name: bookinfo
spec:
  parentRefs:
      name: eg-gw
  hostnames:
    - "bookinfo.com"
  rules:
  - filters:
    - type: RequestHeaderModifier
      requestHeaderModifier:
        remove:
          - x-user-key
    backendRefs:
    - name: productpage
      port: 8080
